--- a/Move.toml
+++ b/Move.toml
@@ -4,7 +4,7 @@ version = "2.0.1"
 
 [addresses]
 StarcoinFramework = "0x1"
-Bridge = "0xf8ea2d94b8a7d83ace33bb56731268e0"
+ZionBridge = "0xf8ea2d94b8a7d83ace33bb56731268e0"
 
 [dependencies]
 # v1.12.9
